--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 gunicorn
+
 absl-py==0.15.0
 astunparse==1.6.3
 bidict==0.21.4
@@ -28,7 +29,8 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 numpy==1.19.5
 oauthlib==3.1.1
-opencv-python==4.5.4.58
+opencv-python-headless
+opencv-python
 opt-einsum==3.3.0
 Pillow==8.4.0
 protobuf==3.19.1
