--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 numpy==1.19.5
 oauthlib==3.1.1
-opencv-python-headless
+opencv-python-headless==4.2.0.32
 opencv-python
 opt-einsum==3.3.0
 Pillow==8.4.0
