--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,9 @@ Flask==2.0.2
 Flask-Cors==3.0.10
 flask-sock==0.4.0
 Flask-SocketIO==4.3.1
-numpy==1.19.5
+numpy
 opencv-python-headless
 opencv-python
-Pillow==8.4.0
+Pillow
 python-socketio==4.6.0
-tensorflow-cpu==2.5.0
-setuptools
+tensorflow-cpu==2.4.0
