--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ Flask==2.0.2
 Flask-Cors==3.0.10
 flask-sock==0.4.0
 Flask-SocketIO==4.3.1
-numpy
+numpy==1.19.2
 opencv-python-headless
-opencv-python
 Pillow
 python-socketio==4.6.0
-tensorflow-cpu==2.4.0
+six==1.15.0
+tensorflow-cpu==2.5.0
